@@ -1,33 +1,33 @@
 package senla.test.dao;
 
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.springframework.test.context.support.AnnotationConfigContextLoader;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.web.WebAppConfiguration;
 import org.springframework.transaction.annotation.Transactional;
+import senla.configuration.WebMvcConfig;
 import senla.dao.AccountDao;
 import senla.dao.GenreDao;
 import senla.dao.SongDao;
 import senla.exceptions.DataBaseWorkException;
 import senla.models.Location;
 import senla.models.Song;
-import senla.test.configuration.WebMvcConfig;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@RunWith(SpringJUnit4ClassRunner.class)
-@ContextConfiguration(
-        classes = {WebMvcConfig.class},
-        loader = AnnotationConfigContextLoader.class)
+
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration(classes = {WebMvcConfig.class})
+@WebAppConfiguration()
 @Transactional
-@ActiveProfiles("test")
 public class SongDaoTest {
     @Autowired
     private SongDao songDao;
@@ -44,87 +44,91 @@ public class SongDaoTest {
         song.setGenre(genreDao.findById(2L));
         Location location = new Location(song, "./somePath");
         song.setLocation(location);
-        song.setAuthors(new ArrayList(Arrays.asList(accountDao.findById(1L))));
+        song.setAuthors(new ArrayList(List.of(accountDao.findById(1L))));
         return song;
     }
 
     @Test
-    public void findByIdTest() {
+    public void testFindById() {
         Song song = songDao.findById(1L);
 
-        Assert.assertEquals("Лиза", song.getTitle());
-        Assert.assertEquals(1L, song.getId().longValue());
+        assertEquals("Лиза", song.getTitle());
+        assertEquals(1L, song.getId().longValue());
     }
 
     @Test
-    public void findByTitleTest() {
-        List<Song> songs = songDao.findByTitle("Лиза");
+    public void testFindByTitle() {
+        List<Song> songs = songDao.findByTitle("Лиза", 0, 10);
 
         Song song = songs.stream().filter(s -> s.getId() == 1).findFirst().get();
 
-        Assert.assertEquals("Лиза", song.getTitle());
-        Assert.assertEquals(1L, song.getGenre().getId().longValue());
-        Assert.assertEquals(1L, song.getId().longValue());
+        assertEquals("Лиза", song.getTitle());
+        assertEquals(1L, song.getGenre().getId().longValue());
+        assertEquals(1L, song.getId().longValue());
     }
 
     @Test
-    public void findByGenreTest() {
-        List<Song> songs = songDao.findByGenre(genreDao.findById(1L));
+    public void testFindByGenre() {
+        List<Song> songs = songDao.findByGenre(genreDao.findById(1L), 0, 10);
 
         Song song = songs.stream().filter(s -> s.getId() == 1).findFirst().get();
 
-        Assert.assertEquals("Лиза", song.getTitle());
-        Assert.assertEquals(1L, song.getGenre().getId().longValue());
-        Assert.assertEquals(1L, song.getId().longValue());
+        assertEquals("Лиза", song.getTitle());
+        assertEquals(1L, song.getGenre().getId().longValue());
+        assertEquals(1L, song.getId().longValue());
     }
 
     @Test
-    public void findByAlbumIdTest() {
+    public void testFindByAlbumId() {
         List<Song> songs = songDao.findByAlbumId(3L);
 
         Song song = songs.stream().filter(s -> s.getId() == 1).findFirst().get();
 
-        Assert.assertEquals("Лиза", song.getTitle());
-        Assert.assertEquals(1L, song.getGenre().getId().longValue());
-        Assert.assertEquals(1L, song.getId().longValue());
+        assertEquals("Лиза", song.getTitle());
+        assertEquals(1L, song.getGenre().getId().longValue());
+        assertEquals(1L, song.getId().longValue());
     }
 
     @Test
-    public void findAllTest() {
-        List<Song> songs = songDao.findAll();
+    public void testFindAll() {
+        List<Song> songs = songDao.findAll(0, 10);
 
-        for (int i = 0; i < songs.size(); i++) {
-            Assert.assertEquals(songs.get(i).getTitle(), songDao.findById(i + 1L).getTitle());
-        }
+        assertNotNull(songs);
+        assertTrue(songs.size() <= 10);
     }
 
     @Test
-    public void saveTest() {
+    public void testSave() {
         Song song = createSong();
 
         Long index = songDao.save(song);
         song = songDao.findById(index);
 
-        Assert.assertEquals("TestSong", song.getTitle());
-        Assert.assertEquals(2L, song.getGenre().getId().longValue());
+        assertEquals("TestSong", song.getTitle());
+        assertEquals(2L, song.getGenre().getId().longValue());
     }
 
     @Test
-    public void updateTest() {
+    public void testUpdate() {
         Song song = songDao.findById(2L);
-        Assert.assertEquals("TEASER", song.getTitle());
+        assertEquals("TEASER", song.getTitle());
 
         song.setTitle("TEASER TWO");
         songDao.update(song);
 
         song = songDao.findById(2L);
-        Assert.assertEquals("TEASER TWO", song.getTitle());
+        assertEquals("TEASER TWO", song.getTitle());
     }
 
-    @Test(expected = DataBaseWorkException.class)
-    public void deleteByIdTest() {
+    @Test
+    public void testDeleteById() {
         songDao.deleteById(5L);
-        Song song = songDao.findById(5L);
-        System.out.println(song.getTitle());
+
+        DataBaseWorkException dataBaseWorkException =
+                assertThrows(DataBaseWorkException.class, () -> {
+                    songDao.findById(5L);
+                });
+
+        assertEquals("No entity found for query", dataBaseWorkException.getMessage());
     }
 }
